Fixes Heading Overflow in  mobile devices

--- a/webpack/sass/home-page.scss
+++ b/webpack/sass/home-page.scss
@@ -5,6 +5,12 @@
   // Title styling within the hero section
   .hero-title {
     @extend .padding-horizontal-big;
+    @media(max-width:530px) {
+      h1{
+      font-size: 2.8rem;
+      line-height: 1.2;
+      }
+    }
   }
 
   // Description styling within the hero section
